force-app/main/default/objects/Asistencia__c/Asistencia__c.object-meta.xml
<CustomObject>
    <description>Contiene las asistencias semanales de un alumno</description>
    <label>Asistencia</label>
    <nameField>
        <displayFormat>AS-{DDMMYY}-{0000}</displayFormat>
        <label>Nombre de Asistencia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asistencias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>