force-app/main/default/objects/Asistencia__c/fields/ano__c.field-meta.xml
<CustomField>
    <fullName>ano__c</fullName>
    <defaultValue>YEAR(Today())</defaultValue>
    <label>Ano</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>