force-app/main/default/objects/Asistencia__c/fields/Asistencia__c.field-meta.xml
<CustomField>
    <fullName>Asistencia__c</fullName>
    <formula>IF( ISPICKVAL(Lunes__c,&apos;Falto&apos;), 1, IF(ISPICKVAL( Lunes__c,  &apos;Tarde&apos;), 0.5,0))
+IF( ISPICKVAL(Martes__c,&apos;Falto&apos;), 1, IF(ISPICKVAL( Martes__c,  &apos;Tarde&apos;), 0.5,0))
+IF( ISPICKVAL(Miercoles__c,&apos;Falto&apos;), 1, IF(ISPICKVAL( Miercoles__c,  &apos;Tarde&apos;), 0.5,0))
+IF( ISPICKVAL(Jueves__c,&apos;Falto&apos;), 1, IF(ISPICKVAL( Jueves__c,  &apos;Tarde&apos;), 0.5,0))
+IF( ISPICKVAL(Viernes__c,&apos;Falto&apos;), 1, IF(ISPICKVAL( Viernes__c,  &apos;Tarde&apos;), 0.5,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asistencia</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>