force-app/main/default/objects/Asistencia__c/fields/Desde__c.field-meta.xml
<CustomField>
    <fullName>Desde__c</fullName>
    <label>Desde</label>
    <type>Date</type>
</CustomField>