force-app/main/default/objects/Asistencia__c/fields/Hasta__c.field-meta.xml
<CustomField>
    <fullName>Hasta__c</fullName>
    <formula>Desde__c + 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hasta</label>
    <type>Date</type>
</CustomField>