force-app/main/default/objects/Asistencia__c/fields/Miercoles__c.field-meta.xml
<CustomField>
    <fullName>Miercoles__c</fullName>
    <label>Miercoles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Asistencia</valueSetName>
    </valueSet>
</CustomField>