force-app/main/default/objects/Asistencia__c/fields/NombreSemana__c.field-meta.xml
<CustomField>
    <fullName>NombreSemana__c</fullName>
    <formula>&quot;Semana del &quot; &amp; TEXT(DAY(Desde__c)) &amp; &quot;/&quot; &amp; TEXT(MONTH(Desde__c)) &amp; IF(YEAR(Desde__c)&lt;&gt;YEAR(TODAY()), &quot;/&quot; &amp; TEXT(YEAR(Desde__c)), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Semana</label>
    <type>Text</type>
</CustomField>