force-app/main/default/objects/Asistencia__c/fields/Semana__c.field-meta.xml
<CustomField>
    <fullName>Semana__c</fullName>
    <description>Numero de semana del año</description>
    <inlineHelpText>Numero de semana del año, acepta valores entre 1 y 54</inlineHelpText>
    <label>Semana</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>