force-app/main/default/objects/Asistencia__c/fields/SemanaText__c.field-meta.xml
<CustomField>
    <fullName>SemanaText__c</fullName>
    <description>Este campo es el mismo campo Semana pero en Texto porque el group by no permite que se haga con Numeros</description>
    <label>Semana para Agrupar</label>
    <length>2</length>
    <type>Text</type>
</CustomField>