force-app/main/default/objects/Asistencia__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>