force-app/main/default/objects/Asistencia__c/fields/Viernes__c.field-meta.xml
<CustomField>
    <fullName>Viernes__c</fullName>
    <label>Viernes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Asistencia</valueSetName>
    </valueSet>
</CustomField>