force-app/main/default/objects/Asistencia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Boletin__c</columns>
    <columns>Semana__c</columns>
    <columns>Lunes__c</columns>
    <columns>Martes__c</columns>
    <columns>Miercoles__c</columns>
    <columns>Jueves__c</columns>
    <columns>Viernes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Todas</label>
</ListView>