force-app/main/default/objects/Asistencia__c/listViews/EstaSemana.listView-meta.xml
<ListView>
    <fullName>EstaSemana</fullName>
    <columns>Boletin__c</columns>
    <columns>Lunes__c</columns>
    <columns>Martes__c</columns>
    <columns>Miercoles__c</columns>
    <columns>Jueves__c</columns>
    <columns>Viernes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Desde__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Hasta__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Esta Semana</label>
</ListView>